--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -8,7 +8,7 @@
         <small class="small">&nbsp; {{ "consultaproyecto.titulo" | translate }} </small>
       </legend>
 
-      <div class="p-3 info">
+      <div class="info">
         <mat-icon class="info-icon">info</mat-icon> &nbsp;
         <span>{{ 'consultaproyecto.explicacacion' | translate }}</span>
       </div>
