--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,20 +36,17 @@ $primary: (
 );
 $my-primary: mat.define-palette($primary, 100);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$my-typography: mat.define-typography-config(
-    $font-family: 'sans-serif',
-);
+$my-typography: mat.define-typography-config($font-family: 'sans-serif',
+    );
 
-$my-theme: mat.define-light-theme((
-    color: (
-        primary: $my-primary,
-        accent: $my-accent,
-    ),
-    typography: $my-typography,    
-));
+$my-theme: mat.define-light-theme((color: (primary: $my-primary,
+                accent: $my-accent,
+            ),
+            typography: $my-typography,
+        ));
 
 @include mat.all-component-themes($my-theme);
 
-html{
+html {
     font-size: 11pt;
 }
