--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -1,122 +1,226 @@
 <mat-card *ngIf="!loading" class="mat-card">
-  <mat-card-header class="nb-card-header">{{ 'consultaproyecto.titulo' | translate }}
-
+  <mat-card-header class="nb-card-header"
+    >{{ "consultaproyecto.titulo" | translate }}
   </mat-card-header>
   <mat-card-content>
     <fieldset class="fieldseter border">
       <legend>
-        <small class="small">&nbsp; {{ "consultaproyecto.titulo" | translate }} </small>
+        <small class="small"
+          >&nbsp; {{ "consultaproyecto.titulo" | translate }}
+        </small>
       </legend>
 
       <div class="info">
         <mat-icon class="info-icon">info</mat-icon> &nbsp;
-        <span>{{ 'consultaproyecto.explicacacion' | translate }}</span>
+        <span>{{ "consultaproyecto.explicacacion" | translate }}</span>
       </div>
-      <br>
+      <br />
 
       <div class="search-container">
-
-        <input matInput (keyup)="applyFilter($event)" type="text" class="search-input" placeholder="{{ 'consultaproyecto.buscar_en_toda_la_tabla' | translate }}..." #input>
+        <input
+          matInput
+          (keyup)="applyFilter($event)"
+          type="text"
+          class="search-input"
+          placeholder="{{
+            'consultaproyecto.buscar_en_toda_la_tabla' | translate
+          }}..."
+          #input
+        />
         <mat-icon class="icon-busqueda" matPrefix>search</mat-icon>
       </div>
 
-
-      
-
       <div class="">
-        <mat-table mat-table matSortActive="id" [dataSource]="dataSource" matSort class="demo-table">
-
+        <mat-table
+          mat-table
+          matSortActive="id"
+          [dataSource]="dataSource"
+          matSort
+          class="demo-table"
+        >
           <ng-container matColumnDef="id" sticky>
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.id' |
-                translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Id}} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.id" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.ProyectoAcademico.Id }}
+            </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="facultad">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.facultad' |
-                translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.NombreFacultad}} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.facultad" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.NombreFacultad }}
+            </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nombre_proyecto">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
-                'consultaproyecto.nombre_proyecto' | translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Nombre}}</mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.nombre_proyecto" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.ProyectoAcademico.Nombre }}</mat-cell
+            >
           </ng-container>
 
           <ng-container matColumnDef="nivel_proyecto">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
-                'consultaproyecto.nivel_proyecto' | translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.NivelFormacionId.Nombre}} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.nivel_proyecto" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.ProyectoAcademico.NivelFormacionId.Nombre }}
+            </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="codigo">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.codigo' |
-                translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Codigo}} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.codigo" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.ProyectoAcademico.Codigo }}
+            </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="cod_snies">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.cod_snies' |
-                translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.CodigoSnies}} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.cod_snies" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.ProyectoAcademico.CodigoSnies }}
+            </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="activo">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.activo' |
-                translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.OfertaLetra}} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.activo" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{ row.OfertaLetra }} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="vencimiento_registro">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
-                'consultaproyecto.vencimiento_registro' | translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row" class="center"> {{row.FechaVenimientoAcreditacion }} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{ "consultaproyecto.vencimiento_registro" | translate }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row" class="center">
+              {{ row.FechaVenimientoAcreditacion }}
+            </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="vencimiento_alta_calidad">
-            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
-                'consultaproyecto.vencimiento_alta_calidad' | translate }}</b> </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.FechaVenimientoCalidad }} </mat-cell>
+            <mat-header-cell
+              class="text-left"
+              *matHeaderCellDef
+              mat-sort-header
+            >
+              <b>{{
+                "consultaproyecto.vencimiento_alta_calidad" | translate
+              }}</b>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{ row.FechaVenimientoCalidad }}
+            </mat-cell>
           </ng-container>
 
-
           <ng-container matColumnDef="acciones" stickyEnd>
-            <mat-header-cell class="text-left " rowspan="3" *matHeaderCellDef mat-sort-header><b>
-                {{'consultaproyecto.acciones' |
-                translate}}</b> </mat-header-cell>
+            <mat-header-cell
+              class="text-left"
+              rowspan="3"
+              *matHeaderCellDef
+              mat-sort-header
+              ><b> {{ "consultaproyecto.acciones" | translate }}</b>
+            </mat-header-cell>
 
             <mat-cell *matCellDef="let row">
-              <mat-icon class="link icono" (click)="promesaid_consulta(row.ProyectoAcademico.Id)" aria-hidden="false"
-                title="{{'consultaproyecto.consulta' | translate}}" fontIcon="search_outline"></mat-icon>
+              <mat-icon
+                class="link icono"
+                (click)="promesaid_consulta(row.ProyectoAcademico.Id)"
+                aria-hidden="false"
+                title="{{ 'consultaproyecto.consulta' | translate }}"
+                fontIcon="search_outline"
+              ></mat-icon>
 
-              <mat-icon class="link icono" (click)="promesaid_modificar(row.ProyectoAcademico.Id)" aria-hidden="false"
-                title="{{'consultaproyecto.editar' | translate}}" fontIcon="edit_outline"></mat-icon>
+              <mat-icon
+                class="link icono"
+                (click)="promesaid_modificar(row.ProyectoAcademico.Id)"
+                aria-hidden="false"
+                title="{{ 'consultaproyecto.editar' | translate }}"
+                fontIcon="edit_outline"
+              ></mat-icon>
 
-              <mat-icon class="link icono " (click)="inhabilitarProyecto(row.ProyectoAcademico)" aria-hidden="false"
-                fontIcon="lock_outline" title="{{'consultaproyecto.inhabilitar' | translate}}"></mat-icon>
+              <mat-icon
+                class="link icono"
+                (click)="inhabilitarProyecto(row.ProyectoAcademico)"
+                aria-hidden="false"
+                [fontIcon]="row.ProyectoAcademico.Activo ? 'check_circle' : 'cancel'"
+                title="{{ 'consultaproyecto.inhabilitar' | translate }}"
+              ></mat-icon>
             </mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">{{'consultaproyecto.no_se_encontro_informacion_con' | translate}}:
-              "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4">
+              {{
+                "consultaproyecto.no_se_encontro_informacion_con" | translate
+              }}: "{{ input.value }}"
+            </td>
           </tr>
         </mat-table>
-        <br>
-        <mat-paginator #paginator [hidePageSize]="true" [showFirstLastButtons]="true" [pageSize]="10"
-          aria-label="Select page of users">
+        <br />
+        <mat-paginator
+          #paginator
+          [hidePageSize]="true"
+          [showFirstLastButtons]="true"
+          [pageSize]="10"
+          aria-label="Select page of users"
+        >
         </mat-paginator>
       </div>
 
-      <br>
+      <br />
     </fieldset>
   </mat-card-content>
 </mat-card>
-<br><br><br><br>
-  <mat-progress-spinner *ngIf="loading" mode="indeterminate" diameter="100"></mat-progress-spinner>
-
+<br /><br /><br /><br />
+<mat-progress-spinner
+  *ngIf="loading"
+  mode="indeterminate"
+  diameter="100"
+></mat-progress-spinner>
